--- a/src/package/metadata.desktop
+++ b/src/package/metadata.desktop
@@ -95,9 +95,9 @@ X-KDE-Library=plasma_applet_supergfxctl
 
 X-KDE-PluginInfo-Author=Janghyub Seo
 X-KDE-PluginInfo-Email=jhyub06@gmail.com
-X-KDE-PluginInfo-Name=org.kde.plasma.supergfxctl
+X-KDE-PluginInfo-Name=dev.jhyub.supergfxctl
 X-KDE-PluginInfo-Version=1.0
-X-KDE-PluginInfo-Website=https://plasma.kde.org/
+X-KDE-PluginInfo-Website=https://jhyub.dev/supergfxctl-plasmoid
 X-KDE-PluginInfo-Category=Utilities
 X-KDE-PluginInfo-License=LGPL-2.1+
 X-KDE-PluginInfo-EnabledByDefault=true
