--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ find_package(KF5 REQUIRED COMPONENTS
 find_package(Qt5 CONFIG REQUIRED COMPONENTS
     Quick
     Core
+    DBus
 )
 
 add_subdirectory(src)
