--- a/src/package/metadata.desktop
+++ b/src/package/metadata.desktop
@@ -13,7 +13,7 @@ X-KDE-PluginInfo-Author=Janghyub Seo
 X-KDE-PluginInfo-Email=jhyub06@gmail.com
 X-KDE-PluginInfo-Name=dev.jhyub.supergfxctl
 X-KDE-PluginInfo-Version=1.0
-X-KDE-PluginInfo-Website=https://jhyub.dev/supergfxctl-plasmoid
+X-KDE-PluginInfo-Website=https://gitlab.com/Jhyub/supergfxctl-plasmoid
 X-KDE-PluginInfo-Category=Utilities
 X-KDE-PluginInfo-License=MPL-2.0
 X-KDE-PluginInfo-EnabledByDefault=true
