add version check

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 3.16)
 
 project(plasma-supergfxctl)
- 
+
 find_package(ECM 1.4.0 REQUIRED NO_MODULE)
 set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
+
+add_compile_definitions(REQUIRED_UPSTREAM_VERSION="4.0.0")
 
 include(KDEInstallDirs)
 include(KDECMakeSettings)
@@ -11,9 +13,9 @@ include(KDECompilerSettings NO_POLICY_SCOPE)
 include(FeatureSummary)
 
 find_package(KF5 REQUIRED COMPONENTS
-    Plasma
-    I18n
-)
+        Plasma
+        I18n
+        )
 
 find_package(Qt5 CONFIG REQUIRED COMPONENTS
     Quick
