--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,14 @@
 add_definitions(-DTRANSLATION_DOMAIN=\"dev.jhyub.supergfxctl\")
 
-add_library(plasma_applet_supergfxctl MODULE supergfxctl.cpp modelist.cpp modelist.h)
+add_library(plasma_applet_supergfxctl MODULE SuperGfxCtl.cpp GfxMode.cpp GfxMode.h GfxAction.h GfxModeCandidate.cpp GfxModeCandidate.h GfxPower.h DaemonController.cpp DaemonController.h GfxPower.cpp GfxAction.cpp)
 
 kcoreaddons_desktop_to_json(plasma_applet_supergfxctl package/metadata.desktop SERVICE_TYPES plasma-applet.desktop)
 
 target_link_libraries(plasma_applet_supergfxctl
                       Qt5::Gui
-                      Qt5::DBus
-                      KF5::Plasma
+        Qt5::DBus
+        Qt5::Qml
+        KF5::Plasma
                       KF5::I18n)
 
 
