--- a/src/package/metadata.desktop
+++ b/src/package/metadata.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=SuperGFX
+Name=SUPERGFX
 Comment=Switch between GPU modes via supergfxd
 Comment[ko]=supergfxd를 이용한 GPU 모드 변경
 
