--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,26 +5,26 @@ project(supergfxctl-plasmoid)
 find_package(ECM 1.4.0 REQUIRED NO_MODULE)
 set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
 
-add_compile_definitions(REQUIRED_UPSTREAM_VERSION="4.0.3")
-
 include(KDEInstallDirs)
 include(KDECMakeSettings)
 include(KDECompilerSettings NO_POLICY_SCOPE)
 include(FeatureSummary)
+include(FindGettext)
 
-find_package(KF5 REQUIRED COMPONENTS
-        Plasma
-        I18n
-        )
-
-find_package(Qt5 CONFIG REQUIRED COMPONENTS
-        Quick
-        Core
-        DBus
-        )
+find_package(KF5 REQUIRED COMPONENTS Plasma I18n)
+find_package(Qt5 CONFIG REQUIRED COMPONENTS Quick Core DBus)
 
 add_subdirectory(src)
 
-feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
+add_custom_command(OUTPUT ${CMAKE_CURRENT_LIST_DIR}/translation/install
+        DEPENDS ${CMAKE_CURRENT_LIST_DIR}/translation/build.sh
+        COMMAND env TRANSLATION_PATH="${CMAKE_CURRENT_LIST_DIR}/translation" bash "${CMAKE_CURRENT_LIST_DIR}/translation/build.sh"
+        )
+add_custom_target(BuildTranslation ALL DEPENDS ${CMAKE_CURRENT_LIST_DIR}/translation/install)
+install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/icons/status
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/scalable
+        FILES_MATCHING PATTERN "*.svg"
+        )
+install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/translation/install/ DESTINATION ${CMAKE_INSTALL_PREFIX})
 
-install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/icons/status DESTINATION ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/scalable FILES_MATCHING PATTERN "*.svg")
+feature_summary(WHAT ALL FATAL_ON_MISSING_REQUIRED_PACKAGES)
