--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,7 @@ include(KDECompilerSettings NO_POLICY_SCOPE)
 include(FeatureSummary)
 include(FindGettext)
 
-find_package(KF6 REQUIRED COMPONENTS I18n)
-find_package(Plasma REQUIRED)
+find_package(KF6 REQUIRED COMPONENTS Plasma I18n)
 find_package(Qt6 CONFIG REQUIRED COMPONENTS Qml Gui Core DBus)
 
 add_subdirectory(src)
