add plasma to target link

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,7 +2,7 @@ add_compile_definitions(REQUIRED_UPSTREAM_VERSION="5.1.0" TRANSLATION_DOMAIN="pl
 
 add_library(dev.jhyub.supergfxctl MODULE SuperGfxCtl.cpp GfxMode.cpp GfxMode.h GfxAction.h GfxModeCandidate.cpp GfxModeCandidate.h GfxPower.h DaemonController.cpp DaemonController.h GfxPower.cpp GfxAction.cpp)
 
-target_link_libraries(dev.jhyub.supergfxctl Qt6::Gui Qt6::DBus Qt6::Qml KF6::I18n)
+target_link_libraries(dev.jhyub.supergfxctl Qt6::Gui Qt6::DBus Qt6::Qml Plasma::Plasma KF6::I18n)
 
 install(TARGETS dev.jhyub.supergfxctl DESTINATION ${KDE_INSTALL_PLUGINDIR}/plasma/applets)
 
